tdf#168252: fix "standard" date in SwDBField::FormatValue

... after commit 5b808448dc79e996efa7cb5082145d4e5803daa6 (Related:
tdf#167591 Make STANDARD_DB_DATE more standard, 2025-07-21).

Change-Id: I3bbe87c77aafb44cf53bc43613eeb3eb975b42f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190749
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 92f0eeef847bb8c980aef1760c3355df0e2e11ef)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190777
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>